# rad

./: Cargo.toml  basic.frag  basic.vert  readme.md
,github/workflows/: workflow.yml
.github/workflows/: rust.yml
examples/window/: Cargo.toml  build.rs  cargo.toml
examples/window/src/: main.rs  main_window.rs
rad/: Cargo.toml  build.rs
rad/src/: lib.rs
rad/src/core/: filesystem.rs  mod.rs  unsafe_send.rs
rad/src/gpu/: camera.rs  image.rs  material.rs  mod.rs  renderer.rs  renderer_types.rs
rad/src/gpu/directx/: renderer_common.rs  renderer_directx12.rs
rad/src/gpu/opengl/: renderer_opengl.rs
rad/src/gpu/vulkan/: command_pool.rs  device.rs  fence.rs  framebuffer.rs  image_view.rs  instance.rs  mod.rs  render_pass.rs  renderer_vulkan.rs  semaphore.rs  surface.rs  swapchain.rs  util.rs  vulkan_device.rs  vulkan_instance.rs  vulkan_surface.rs  vulkan_swapchain.rs
rad/src/gui/: emscripten.rs  main_loop.rs  mod.rs  window.rs
rad/tests/: window_tests.rs
shaders/gl/: basic.frag
shaders/gles/: basic.frag  basic.vert
src/: gpu.rs  main.rs  main_window.rs  renderer.rs  renderer_opengl.rs  renderer_vulkan.rs
src/app/: main_window.rs
src/gpu/: camera.rs  material.rs  mod.rs  renderer.rs  renderer_opengl.rs  renderer_types.rs  renderer_vulkan.rs  uniforms.rs
src/gpu/directx/: mod.rs  renderer_common.rs  renderer_directx12.rs
src/gpu/opengl/: mod.rs
src/gpu/vulkan/: mod.rs
src/gui/: window.rs
test/: basic.vert
