[package]
name = "rad"
version = "0.1.0"
authors = ["Eden Harris <aussiedwarf@gmail.com>"]
edition = "2021"

[lib]
name = "rad"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#"bundled", "static-link", "ttf",
[dependencies]
murmur3 = "~0.5.2"
sdl2 = { version = "0.35.2", default-features = false, features = ["static-link", "bundled", "raw-window-handle"] }
static_assertions = "~1.1.0"
gl = "~0.14.0"
raw-window-handle = "~0.5.2"
libc = "~0.2.140"
glam = "~0.23.0"
bitflags = "~2.0.2"
image = "~0.24.6"

[dependencies.windows]
version = "~0.48.0"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct3D_Fxc",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D12",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
  "Win32_UI_WindowsAndMessaging",
]
