[package]
name = "rad"
version = "0.1.0"
authors = ["Eden Harris <aussiedwarf@gmail.com>"]
edition = "2021"

[lib]
name = "rad"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#"bundled", "static-link", "ttf",
[dependencies]
murmur3 = "~0.5.2"
static_assertions = "~1.1.0"
gl = "~0.14.0"
libc = "~0.2.147"
glam = "~0.23.0"
bitflags = "~2.0.2"
image = {version = "~0.24.6", default-features = false, features = ["png", "jpeg", "bmp"]}

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2.git", rev = "8613c50", default-features = false, features = ["static-link", "bundled", "raw-window-handle"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2.git", rev = "8613c50", default-features = false, features = ["static-link", "bundled"] }

[target.'cfg(windows)'.dependencies.windows]
version = "~0.48.0"
features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct3D_Fxc",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D12",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
  "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(target_os = "emscripten")'.features]
default = ["pthread"]
