[package]
name = "window"
version = "0.1.0"
authors = ["Eden Harris <aussiedwarf@gmail.com>"]
edition = "2021"

[dependencies]
rad = { path = "../../rad" }

clap = {version = "~4.3.12", features = ["derive"]}
glam = "~0.23.0"
image = "~0.24.6"
libc = "~0.2.147"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2.git", rev = "8613c50", default-features = false, features = ["static-link", "bundled", "raw-window-handle"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2.git", rev = "8613c50", default-features = false, features = ["static-link", "bundled"] }
